--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -13,12 +13,12 @@
           <label for="price" class="placeholder">Item's price</label>
         </div>
         <div class="input-itemInfo quan">
-          <input id="quantity_inStock" class="form-control" type="number" placeholder=" " [formControl]="quantity"/>
+          <input id="quantity_inStock" class="form-control" type="number" placeholder=" " [formControl]="quantity_inStock"/>
           <div class="cut"></div>
           <label for="quantity_inStock" class="placeholder">Quantity instock</label>
         </div>
         <div class="input-itemInfo desc">
-            <textarea id="des" class="form-control" type="text" placeholder=" " [formControl]="des"></textarea>
+            <textarea id="des" class="form-control" type="text" placeholder=" " [formControl]="description"></textarea>
             <div class="cut cut-short"></div>
             <label for="des" class="placeholder">Item's Description</label>
           </div>
