--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -1,6 +1,5 @@
 body {
     align-items: center;
-    background-color: #000000;
     display: flex;
     justify-content: center;
     height: 100vh;
@@ -12,6 +11,7 @@ body {
     box-sizing: border-box;
     height: 550px;
     padding: 20px;
+    margin: auto;
     width: 320px;
   }
   
