--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,6 @@ body{
     background-color: #000000;
     // display: flex;
     // justify-content: center;
-    align-items: center;
+    // align-items: center;
     // height: 100vh;
 }
