--- a/src/app/b-cards/b-cards.component.html
+++ b/src/app/b-cards/b-cards.component.html
@@ -1,123 +1,43 @@
 <!-- flip-card-container -->
-<div class="flip-card-container" style="--hue: 220">
-  <div class="flip-card">
-
-    <div class="card-front">
-      <figure>
-        <div class="img-bg"></div>
-        <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
-        <figcaption>Brohm Lake</figcaption>
-      </figure>
-
-      <ul>
-        <li>{{item.name}}</li>
-        <li>{{item.price}}</li>
-        <li>{{item.quantity_inStock}}</li>
-        <li>{{item.description}}</li>
-        <li>Detail 5</li>
-      </ul>
-    </div>
-
-    <div class="card-back">
-      <figure>
-        <div class="img-bg"></div>
-        <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
-      </figure>
-
-      <button>Book</button>
-
-      <div class="design-container">
-        <span class="design design--1"></span>
-        <span class="design design--2"></span>
-        <span class="design design--3"></span>
-        <span class="design design--4"></span>
-        <span class="design design--5"></span>
-        <span class="design design--6"></span>
-        <span class="design design--7"></span>
-        <span class="design design--8"></span>
+<div class="box-container">
+  <div class="flip-card-container" style="--hue: 220">
+    <div class="flip-card">
+  
+      <div class="card-front">
+        <figure>
+          <div class="img-bg"></div>
+          <img src={{item.url}} alt="Random Img">
+          <figcaption style="border-radius: 10px;">{{item.name}}</figcaption>
+        </figure>
+  
+        <ul>
+          <li>{{item.name}}</li>
+          <li>Price: ${{(item.price).toFixed(2)}}</li>
+          <li>In stock: {{item.quantity_inStock}}</li>
+          <li>Description: {{item.description}}</li>
+        </ul>
       </div>
-    </div>
-
-  </div>
-</div>
-<div class="flip-card-container" style="--hue: 220">
-  <div class="flip-card">
-
-    <div class="card-front">
-      <figure>
-        <div class="img-bg"></div>
-        <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
-        <figcaption>Brohm Lake</figcaption>
-      </figure>
-
-      <ul>
-        <li>{{item.name}}</li>
-        <li>{{item.price}}</li>
-        <li>{{item.quantity_inStock}}</li>
-        <li>{{item.description}}</li>
-        <li>Detail 5</li>
-      </ul>
-    </div>
-
-    <div class="card-back">
-      <figure>
-        <div class="img-bg"></div>
-        <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
-      </figure>
-
-      <button>Book</button>
-
-      <div class="design-container">
-        <span class="design design--1"></span>
-        <span class="design design--2"></span>
-        <span class="design design--3"></span>
-        <span class="design design--4"></span>
-        <span class="design design--5"></span>
-        <span class="design design--6"></span>
-        <span class="design design--7"></span>
-        <span class="design design--8"></span>
+  
+      <div class="card-back">
+        <figure>
+          <div class="img-bg"></div>
+          <img src={{item.url}} alt="Random Img">
+        </figure>
+  
+        <button id="oncart" type="button" (click)="activated()">Add to cart</button>
+  
+        <div class="design-container">
+          <span class="design design--1"></span>
+          <span class="design design--2"></span>
+          <span class="design design--3"></span>
+          <span class="design design--4"></span>
+          <span class="design design--5"></span>
+          <span class="design design--6"></span>
+          <span class="design design--7"></span>
+          <span class="design design--8"></span>
+        </div>
       </div>
+  
     </div>
-
-  </div>
-</div><div class="flip-card-container" style="--hue: 220">
-  <div class="flip-card">
-
-    <div class="card-front">
-      <figure>
-        <div class="img-bg"></div>
-        <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
-        <figcaption>Brohm Lake</figcaption>
-      </figure>
-
-      <ul>
-        <li>{{item.name}}</li>
-        <li>{{item.price}}</li>
-        <li>{{item.quantity_inStock}}</li>
-        <li>{{item.description}}</li>
-        <li>Detail 5</li>
-      </ul>
-    </div>
-
-    <div class="card-back">
-      <figure>
-        <div class="img-bg"></div>
-        <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
-      </figure>
-
-      <button>Book</button>
-
-      <div class="design-container">
-        <span class="design design--1"></span>
-        <span class="design design--2"></span>
-        <span class="design design--3"></span>
-        <span class="design design--4"></span>
-        <span class="design design--5"></span>
-        <span class="design design--6"></span>
-        <span class="design design--7"></span>
-        <span class="design design--8"></span>
-      </div>
-    </div>
-
   </div>
 </div>
