--- a/src/app/b-cards/b-cards.component.scss
+++ b/src/app/b-cards/b-cards.component.scss
@@ -12,7 +12,7 @@
 
 /* body */
 body {
-  min-height: 100vh;
+  // min-height: 100vh;
   padding: 40px;
   width: 100%;
   display: flex;
@@ -22,6 +22,15 @@ body {
 
   background: hsl(220, 10%, 12%);
   font-family: "Lato", "Segoe Ui", -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+.box-container{
+  height: 100%;
+  // max-width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 /* .flip-card-container */
