--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,5 @@
 <dialog #cart class="dialog">
     <app-cart [carts]="carts" (closeDialog)="close()"></app-cart>
 </dialog>
+
+<!-- <router-outlet></router-outlet> -->
