--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     background-color: #000000;
+    background-image: url("https://w0.peakpx.com/wallpaper/249/688/HD-wallpaper-night-sky-black-stars.jpg");
+    // background-size: contain;
     // display: flex;
     // justify-content: center;
     // align-items: center;
