--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .container {
-    // max-width: 80%;
+    max-width: 80%;
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    // margin: ;
+    margin: auto;
     gap: 2px;
 }
 
