--- a/src/app/components/b-cards/b-cards.component.scss
+++ b/src/app/components/b-cards/b-cards.component.scss
@@ -31,6 +31,9 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  // font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  // font-weight: bold;
 }
 
 /* .flip-card-container */
@@ -88,6 +91,11 @@ body {
 .card-front {
   transform: rotateY(0deg);
   z-index: 2;
+
+  &>ul>li{
+    font-size: 20px;
+    font-weight: bold;
+  }
 }
 
 /* .card-back */
