--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -7,7 +7,13 @@
         <div class="header">
           <p class="name">{{item.name}}</p>
           <p class="price">Price: ${{(item.price).toFixed(2)}}</p>
-          <p class="quantity_inStock">Quantity: {{item.quantity_inCart}}</p>
+          <div class="quantity_inCart">
+            <p>Quantity: {{item.quantity_inCart}}</p>
+            <button class="add" (click)="this.cartService.addItem(item)">+</button>
+            <button class="remove" (click)="this.cartService.reduceItem(item)">-</button>
+          </div>
+          <p class="price">Quantity In Store: ${{item.quantity_inStock}}</p>
+          <button class="delItem" (click)="deleteItem(item)">x</button>
           <!-- <p class="subtitle"> total: {{item.price*item.quantity_inStock}}</p> -->
         </div>
     </div>
