--- a/src/app/components/b-cards/b-cards.component.html
+++ b/src/app/components/b-cards/b-cards.component.html
@@ -1,5 +1,5 @@
 <!-- flip-card-container -->
-<div class="box-container">
+<div (click)="do()" class="box-container">
   <div class="flip-card-container" style="--hue: 220">
     <div class="flip-card">
   
