--- a/src/app/pages/shopping/shopping.component.html
+++ b/src/app/pages/shopping/shopping.component.html
@@ -1,1 +1,16 @@
-<p>shopping works!</p>
+<app-navbar></app-navbar>
+
+<div class="form-container">
+    <app-form [listItems]="listItems" (openCart)="showDialog()" (onNewItem)="addItem($event)"></app-form>
+</div>
+<div class="container">
+    <app-b-cards 
+    *ngFor="let item of listItems"
+    [item]="item"
+    (onCart) = "addCart(item)"
+    ></app-b-cards>
+</div>
+
+<dialog #cart class="dialog">
+    <app-cart [carts]="carts" (closeDialog)="close()"></app-cart>
+</dialog>
