--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -25,9 +25,17 @@
     // background-color: #000000; 
     display: flex; 
     flex-direction: center;
-    justify-content: center;; 
-    align-items: left;
-    gap:20px
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+
+    & > p{
+        margin: 0;
+    };
+
+    & > div > p{
+        margin: 0;
+    };
 }
 
 .quantity_inCart{
