--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -156,10 +156,13 @@ body {
 
 .checkCart {
   // position: relative;
-  border-radius: 20px;
+  border-radius: 10px;
+  border: solid 0.5px;
   width: 50px;
   height: 50px;
   transition: all 0.2s ease-in-out;
+  filter: invert(1);
+
 
   & > img {
     width: 100%;
@@ -169,7 +172,7 @@ body {
 
   &:hover {
     cursor: pointer;
-    filter: invert(1);
+    filter: invert(0);
     transition: all 0.2s ease-in-out;
   }
 }
