--- a/src/app/pages/shopping/shopping.component.scss
+++ b/src/app/pages/shopping/shopping.component.scss
@@ -11,8 +11,24 @@
     width : 50%;
     max-height : 80%;
     border-radius : 20px;
-    border-color: aliceblue;
     background-color: rgb(12, 12, 12);
     position: fixed;
-    border: solid;
+    border: none;
+}
+
+.detailDialog{
+    width : 25%;
+    max-height : 95%;
+    border-radius : 20px;
+    background-color: rgb(0, 4, 8);
+    position: fixed;
+    border: solid 4px;
+    border-color: rgb(0, 58, 68);
+    align-content: center;
+    color: white;
+}
+
+#wow{
+    width: 100%;
+    height: 100%;
 }
