--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -39,8 +39,8 @@ li.menu_list .front {
     transform-origin: 0 0;
 }
 a.side {
-    background-color: #d4ff00;
-    color: #34465d;
+    background-color: #4E4FEB;
+    color: #ffffff;
     transform-origin: 0 0 85px;
     transform: rotateY(-90deg);
 }
